--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ sites/*/settings*.php
 # Ignore paths that contain user-generated content.
 sites/*/files
 sites/*/private
+
+# Mac files.
+.DS_Store
+
+# Ignore developer modules and libraries.
+sites/all/modules/contrib/devel
+sites/all/modules/contrib/devel_themer
+sites/all/modules/contrib/simplehtmldom
+sites/all/libraries/simplehtmldom
